# cpp_big_homework

./: CMakeLists.txt  MenuFunc.cpp  MenuFunc.h  README.md  Utils.cpp  Utils.h  main.cpp
model/: Bus.cpp  Bus.h  Car.cpp  Car.h  Date.cpp  Date.h  Person.cpp  Person.h  Truck.cpp  Truck.h  Vehicle.cpp  Vehicle.h
service/: FileService.cpp  FileService.h  PersonService.cpp  PersonService.h  VehicleService.cpp  VehicleService.h
unit_test/: VehicleServiceTest.cpp  VehicleServiceTest.h
